--- a/second.html
+++ b/second.html
@@ -1,14 +1,97 @@
 <html>
     <head>
-        <center>
-            <h1>Second Html</h1>
-            <a href="first.html"> First Html </a> 
-        </center>
-
+        <title>Second Page </title>
+        <link rel="icon" href="is.png">
     </head>
     <body>
+        <center>
+            <h1>Second Html</h1>
+            <a href="index.html"> Home</a>
+        </center>
+        <hr/>
+        <video controls width="300" height="300" muted poster="vid1.png">
+            <source src="vid1.mp4" type="video/mp4"/>
+        </video>
+        <p>            An HTML element is defined by a start tag, some content, and an end ta. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+        </p>
+        <!--Unordered List-->
+        <ul>
+            <li>India</li>
+            <li>Italy</li>
+            <li>London</li>
+            <li>Germany</li>
+        </ul>
+        <!--Ordered List-->
+        <ol type="A" start="27">
+            <li>red
+            </li>
+            <li>Blue</li>
+            <li>
+            Green
+            </li>
+        </ol>
+        <dl>
+            <dt>Coffee</dt>
+            <dd>Expresso</dd>
+            <dd>Cappuccino</dd>
+            <dd>Coffee Latte</dd>
+        </dl>
+        <!--table-->
+        <table>
+            <thead>
+                <tr>
+                    <th> Roll No</th>
+                    <th> Name</th>
+                    <th>Course</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Bharathi</td>
+                    <td>Java Script</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Pranavi</td>
+                    <td>Nodejs</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Rithika</td>
+                    <td>Angular</td>
+                </tr>
+            </tbody>
+        </table>
+        <!--Table closed-->
+        <hr/>
+        <p>            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
+        </p>
+        <center>
+            <img src="italy.jpg" alt="italy Image"/>
+
+        </center>
+        <p>            छपाई और अक्षर योजन उद्योग का एक साधारण डमी पाठ है. Lorem Ipsum सन १५०० के बाद से अभी तक इस उद्योग का मानक डमी पाठ मन गया, जब एक अज्ञात मुद्रक ने नमूना लेकर एक नमूना किताब बनाई. यह न केवल पाँच सदियों से जीवित रहा बल्कि इसने इलेक्ट्रॉनिक मीडिया में छलांग लगाने के बाद भी मूलतः    
+        </p>
+
+        <p style="color:blueviolet;font-size:large">This is about tags</p> <p style="background-color:yellow;font-size:large">This is about tags</p>
+        <span style="background-color:rgb(52, 175, 216);font-size: 30px;">This is about tags</span><span style="background-color:gray;">This is about tags</span>
+      
+        <h1>Heading1</h1>
+        <h2>Heading2</h2>
+        <p style="background-color:gold">This is about the tags</p>
+        <span style="background-color:green">This is about the tags</span>
+        <p style="background-color:pink">This is about the tags</p>
 
     </body>
+        <!--footer starts-->
+        <footer>
+            <hr/>
+            <center>
+                <h3> &copy;Learning Js</h3>
 
 
+            </center>
+        </footer>
+   
 </html>
